src/components/layouts/totem.css
.memori-widget.memori-layout-totem {
    height: 100vh !important;
}

.memori-widget.memori-layout-totem .memori--global-background.no-background-image {
    background: linear-gradient(#333, #eee);
}

.memori-widget>.memori-spin.memori-totem-layout {
    display: flex;
    height: 100%;
    flex-direction: column;
}

.memori-totem-layout--header {
    text-align: right;
}

.memori-totem-layout--avatar {
    flex: 1;
}

.memori-totem-layout--avatar .memori--avatar-wrapper {
    position: fixed;
    z-index: 0;
    top: 0;
    left: 0;
    overflow: hidden;
    width: 100%;
}

.memori-totem-layout--avatar .memori--blob-container {
    display: block;
}

@media (max-width: 480px) {
    .memori-totem-layout--avatar .memori--blob-container {
        display: block;
    }
}

@media (max-width: 870px) {
    .memori-totem-layout--avatar .memori--blob-container {
        display: block;
    }
}

.memori-totem-layout .memori-header {
    position: relative;
    z-index: 100;
    display: inline-flex;
    width: auto;
    height: auto;
    flex-direction: column;
}

.memori-totem-layout .memori-header .memori-share-button,
.memori-totem-layout .memori-header .memori-header--button+.memori-header--button {
    margin-top: 0.25rem;
    margin-left: 0;
}

.memori-totem-layout .memori-chat--cover {
    display: none;
}

.memori-totem-layout .memori--cover {
    padding: 0;
    background: none;
}

.memori-totem-layout .memori--powered-by {
    top: 0;
    bottom: auto;
}

.memori-totem-layout--avatar .memori--avatar-wrapper>div {
    overflow: visible !important;
    /* width: 100% !important;
    height: 100% !important; */
    width: auto !important;
    height: 90vh !important;
    max-height: 90vh;
    border-radius: 0;
    transform: scale(1.7) translate(0px, 10vh);
}

.memori-totem-layout--avatar .memori--avatar-wrapper canvas {
    width: auto !important;
    max-width: 100%;
    height: 100% !important;
    max-height: 100%;
}

.memori-totem-layout--controls {
    position: relative;
    z-index: 5;
}

.memori-totem-layout--controls .memori--start-panel,
.memori-totem-layout--controls .memori-chat--history,
.memori-totem-layout--controls .memori-chat--content {
    background: transparent;
}

.memori-totem-layout--controls .memori--start-panel,
.memori-totem-layout--controls .memori-chat--wrapper {
    width: 80vw;
    max-width: 800px;
    padding: 1rem;
    margin: 0 auto;
}

@media (max-width: 870px) {

    .memori-totem-layout--controls .memori--start-panel,
    .memori-totem-layout--controls .memori-chat--wrapper {
        width: 100%;
    }

    .memori-totem-layout--controls .memori-chat--wrapper {
        padding: 0;
    }
}

@media (max-width: 480px) {
    .memori-totem-layou .memori-send-on-enter-menu {
        display: none;
    }

    .memori-totem-layou .memori-header--button-settings {
        display: none;
    }
}

.memori-totem-layout .memori--avatar-toggle {
    display: none;
    width: 100%;
    justify-content: center;
}

.memori-totem-layout .memori--title,
.memori-totem-layout .memori--description,
.memori-totem-layout .memori--needsPosition {
    color: var(--memori-text-color);
}

.memori-totem-layout .memori--global-background-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(200, 200, 200, 0.8));
}

@media (min-width: 481px) {
    .memori-widget.memori-controls-center .memori-totem-layout--controls {
        position: absolute;
        top: 40%;
        width: 100%;
    }
}

.memori-widget.memori-layout-totem.memori--hide-emissions .memori-totem-layout--controls .memori-chat--bubble-container:not(.memori-chat--bubble-from-user),
.memori-widget.memori-layout-totem.memori--hide-emissions.memori--with-speechkey .memori-totem-layout--controls .memori-chat--bubble-container:not(.memori-chat--bubble-from-user) {
    display: none;
}

.memori-totem-layout--avatar .memori-blob {
    z-index: 2;
}

.memori-totem-layout--avatar .memori--avatar-wrapper>div canvas+div {
    position: absolute !important;
    width: 100%;
    height: 100%;
    transform: none !important;
}

.memori-totem-layout--avatar .memori--avatar-wrapper .avatar-loader {
    display: flex;
    width: 100%;
    height: 100%;
    align-items: center;
    justify-content: center;
    transform: none !important;
}

.memori-totem-layout--avatar .memori--avatar-wrapper .avatar-loader figure {
    text-align: center;
}

.memori-totem-layout--avatar .memori--avatar-wrapper .avatar-loader .memori-spin--spinner {
    background: none;
}

